[fix] landing signup button on mobile.

--- a/client/src/components/pages/Landing/Landing.scss
+++ b/client/src/components/pages/Landing/Landing.scss
@@ -33,8 +33,15 @@
 
   &__signup-button {
     @include signup-button;
+    width: 100%;
+    text-align: center;
+    padding: 1rem 0;
+    font-size: 1.1rem;
 
-    padding: 0.9em 8.1em !important;
+    @include at-medium {
+      width: auto;
+      padding: 0.9rem 8.1rem !important;
+    }
   }
 
   &__nav,
